Fix scrollbars on chrome

--- a/css/includes/components/_kb.scss
+++ b/css/includes/components/_kb.scss
@@ -38,5 +38,5 @@
 
 .kb-article {
     max-height: calc(100vh - 150px);
-    overflow: scroll;
+    overflow: auto;
 }
